<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Planet for Android</string>
    <string name="no_sites">No has creado ningún sitio aún...</string>
    <string name="menu_insert">Añadir Sitio</string>
    <string name="site_edit">Edita el sitio:</string>
    <string name="menu_delete">Borrar este sitio...</string>
    <string name="submit_button">Actualizar Sitio</string>
    <string name="no_types">No se han creado tipos aun...</string>
    <string name="type_edit">Edita el tipo:</string>
    <string name="submit_button_type">Actualizar tipo</string>
    <string name="author_info">Autor: Juan Antonio Zea Herranz\nEmail: juanantonio.zea.herranz@alumnos.upm.es</string>
    <string name="menu_author">Author...</string>
    <string name="menu_help">Ayuda</string>
    <string name="help_title0">Planet for Android</string>
    <string name="help_line0">   Bienvenido a Planet para Android, la versión móvil de la popular red social para viajeros. Siga las siguientes instrucciones para su uso y disfrute.\n\n</string>
    <string name="help_title1">Pestaña Tipos</string>
    <string name="help_line1">En esta pestaña puede definir los tipos de sitio.\n\nPara añadir un tipo:\n1.- Pulse menú -> añadir.\n2.-Rellene los datos y pulse actualizar.\n\nPara borrar, deje pulsado sobre un elemento de la lista, y pulse borrar.\n\nPara editar, simplemente toque un elemento de la lista.\n\n</string>
    <string name="help_title2">Pestaña Sitios</string>
    <string name="help_line2">En esta pestaña puede definir los sitios.\n\nPara añadir un sitio:\n1.- Pulse menú -> añadir.\n2.-Rellene los datos y pulse actualizar.\nTambién puede pulsar la imagen para hacer una foto del sitio.\n\nPara borrar, deje pulsado sobre un elemento de la lista, y pulse borrar.\n\nPara editar, simplemente toque un elemento de la lista.\n\n</string>
    <string name="req_location">Buscar en el mapa...</string>
    
</resources>